<resources>
    <string name="app_name">Recepción Surtido Muebles</string>
    <string name="app_loteo">Loteo Muebles</string>
    <string name="jaba_etiqueta">Jaba sin etiqueta</string>
    <string name="domain">com.coppel</string>
    <string name="globaldomain">coppel</string>
    <string name="application_inicio">Inicio de la Aplicación Recepción de Surtido APK1</string>
    <string name="logotipo_de_coppel">logo de coppel.com</string>
    <string name="menu_home">Recepción de Surtido</string>
    <string name="content_description_warnin">icono_warning</string>
    <string name="content_description_logo">logo de coppel.com</string>
    <string name="content_description_back">flecha atrás</string>
    <string name="content_description_chevron">flecha derecha</string>
    <string name="content_description_raya">raya al piso</string>
    <string name="title_uploading">El dispositivo se está\n actualizando</string>
    <string name="loading">Loading…</string>
    <string name="arealoteo">Área:</string>
    <string name="errorWs_reStartFun">Error… reintento automático</string>
    <string name="TransporCelular">"NetworkCapabilities.TRANSPORT_CELLULAR"</string>
    <string name="TransporWIFI">"NetworkCapabilities.TRANSPORT_WIFI"</string>
    <string name="TransporEthernet">"NetworkCapabilities.TRANSPORT_ETHERNET"</string>
    <string name="device"><![CDATA["Dispositivo AndroidPDA es siempre 1 = :-------> %1$d ]]></string>
    <string name="option"><![CDATA["Opción AndroidPDA es siempre 1 = :----> %1$d ]]></string>
    <string name="get_parciales"><![CDATA["Guardar número de parciales = :---------> %1$d ]]></string>
    <string name="getFoliodeSurtido"><![CDATA[Obtener Número de foliodelSurtido:------------------> %1$s ]]></string>
    <string name="getTiendaCoppel"><![CDATA[Obtener Número de Tienda:------------------> %1$s]]></string>
    <string name="getTipoSeleccionado"><![CDATA[Obtener Número de tipoSeleccionado:------------------> %1$d ]]></string>
    <string name="getNumberEmpleado"><![CDATA[Obtener Número de Empleado:------------------> %1$s]]></string>
    <string name="getNumberChofer"><![CDATA[Obtener Número de Chofer:------------------> %1$s]]></string>
    <string name="getmacpda"><![CDATA[Obtener Número de ID Hardware Android:------------------> %1$s ]]></string>
    <string name="getIPWS"><![CDATA[Obtener Número IPWS:------------------> %1$s]]></string>
    <string name="getPuerto"><![CDATA[Obtener Número de puerto 8080:------------------> %1$s]]></string>
    <string name="error_IO_Actualizar"><![CDATA[No se logró obtener datos de ActualizarRecepciónSurtidoPDA---> ]]></string>
    <string name="icono_warning">icono de advertencia</string>
    <string name="icono_coppel">icono logo llave  Coppel</string>
    <string name="icono_flecha_aceptar">icono flecha blanca</string>
    <string name="title_APK1">Error de Aplicación</string>
    <string name="message_APK1">Favor de Iniciar la Aplicación de Recepción de Surtido</string>
    <string name="title_sharedpreferences">Error de Aplicación</string>
    <string name="message_sharedpreferences">No se obtuvieron los valores iniciales</string>
    <string name="btn_aceptar_dialog">Aceptar</string>
    <string name="btn_yes">Sí</string>
    <string name="btn_no">No</string>
    <string name="title_error_assortment_folio">Folio</string>
    <string name="title_folio">Folio:</string>
    <string name="startActivity_APK2"><![CDATA[--------------startActivity App2 Confirmación Surtido Muebles------------------> ]]></string>

    <string name="startActivity_APK1"><![CDATA[--------------startActivity App1 Preconfirmación de Surtido Muebles------------------> ]]></string>
    <string name="salirfragment">Si decide continuar, se eliminará la información leída de la Aplicación</string>
    <string name="menu_salir">Salir</string>
    <string name="quiere_salir">¿Desea Salir?</string>
    <string name="menu_jaba">Jaba sin etiqueta</string>
    <string name="menu_master">Master Pendientes</string>
    <string name="action_settings">Settings</string>
    <string name="menu_master_pendientes">Master Pendientes</string>
    <string name="apkFolio">Folio de surtido:</string>
    <string name="progress_home">%1$d%% de avance</string>
    <string name="tiempo_recepcion">Tiempo de recepción</string>
    <string name="to_end">Finalizar</string>
    <string name="btn_grabar_jabasinetiqueta">Grabar</string>
    <string name="btn_grabar">Grabar</string>
    <string name="alert_grabar">Grabando…</string>
    <string name="btn_salir_jabasinetiqueta">Salir</string>
    <string name="title_ediText">Código / Vale / Master</string>
    <string name="title_jaba_sinetiqueta">SKU</string>
    <string name="input_digitos">"CMS 1234567890"</string>
    <string name="hint">Ingrese el código, vale o master</string>
    <string name="hint_loteo">Ingrese el código o vale</string>
    <string name="hint_cantidad">1</string>
    <string name="master">Master:</string>
    <string name="btn_capturar">Capturar</string>
    <string name="titulo_master_leida">Etiqueta Master</string>
    <string name="master_leida">Esta master ya fue leída</string>
    <string name="titulo_ventasxr">Artículo para entrega a clientes</string>
    <string name="titulo_finalizar">Terminar Surtido</string>
    <string name="msg_finalizar">¿Desea finalizar la preconfirmación con mercancia faltante?</string>

    <string name="titulo_iniciarFolio">Iniciar Surtido</string>
    <string name="msg_iniciarFolio">¿Desea iniciar el folio: %1$s?</string>

    <string name="marcanciaLista">Mercancia capturada</string>
    <string name="marcanciapendiente">Mercancia pendiente</string>
    <string name="size_surtido">"EL total es : %1$d</string>
    <string name="finalizado">00:00:00</string>
    <string name="tiempo_pausado">Tiempo en Pausa %1$d</string>
    <string name="tiempo_cancelado">Tiempo Cancelado %1$d</string>
    <string name="progress">%1$d%%</string>
    <string name="btn_irregularidad_no">No</string>
    <string name="btn_irregularidad_si">Si</string>
    <string name="irregularidad_jaba_aceptar">Aceptar</string>
    <string name="title_irregularidad">¿Desea generar una irregularidad en \n %1$s? </string>
    <string name="title_selecciona_loteomuebles">Seleciona el folio  Pendiente  a Lotear</string>
    <string name="title_irregularidad_jaba">¿Desea generar una irregularidad en la Jaba \n %1$s? </string>
    <string name="title_irregularidad_ropa">¿Desea generar una irregularidad en guía ropa \n %1$s? </string>
    <string name="toolbar_irregularidad">Irregularidad</string>
    <string name="toolbar_irregularidad_jaba">Irregularidad en Jaba</string>
    <string name="toolbar_irregularidad_ropa">Irregularidad en Guía Ropa</string>
    <string name="btn_cargo_irregularidad">Cargo</string>
    <string name="btn_acta_irregularidad">Acta</string>

    <string name="irregularidad_jaba_danada">Jaba dañada</string>
    <string name="irregularidad_jaba_sellos">Jaba con sellos violados</string>
    <string name="irregularidad_jaba_abierta">Jaba abierta</string>


    <string name="irregularidad_ropa_carton_roto">Cartón roto</string>
    <string name="irregularidad_ropa_carton_abierto">Cartón abierto</string>
    <string name="irregularidad_ropa_empaque">Empaque incorrecto</string>

    <string name="radiobutton_cargo_daniado">Dañado</string>
    <string name="radiobutton_cargo_incompleto">Incompleto</string>
    <string name="radiobutton_acta_faltante">Faltante</string>
    <string name="radiobutton_acta_daniado">Dañado</string>
    <string name="radiobutton_acta_incompleto">Incompleto</string>
    <string name="btn_aceptar_cargo">Aceptar</string>
    <string name="textview_title_driver_employee">Número empleado de chofer</string>
    <string name="hint_driver_employee">No empleado de chofer</string>
    <string name="alfa_numeric_mayusculas">1234567890 ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digitos">1234567890</string>
    <string name="hint_acta">Folio Acta</string>
    <string name="hint_NumUnidad">Nº Unidad</string>
    <string name="hint_employee_Gte">Nº Empleado del Gte</string>
    <string name="txtview_title_driver_employee">Nº Empleado de chofer</string>
    <string name="hint_irregular_driver_employee">Nº empleado de chofer</string>
    <string name="hint_employee_auditor">Nº empleado del Auditor</string>
    <string name="hint_irregular_assortment">Folio surtido</string>
    <string name="btn_continue_irregularidad">Aceptar</string>
    <string name="btn_cancelar_irregularidad">Cancelar</string>
    <string name="check_sellos">Sellos o Candado violado</string>
    <string name="check_reten">Caja revisada en retén</string>
    <string name="check_bitacora">Bitácora sin firmas</string>
    <string name="check_laminas">Laminas Sueltas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hint_codigo">Código</string>
    <string name="hint_vale">SKU/Vale</string>
    <string name="hint_parcial">Parcial</string>
    <string name="sobrantes">S</string>
    <string name="exhibir">E</string>
    <string name="tx_irregular">Irregularidad</string>
    <string name="subtitulo_jaba_fragment">Selecciona el rubro al cuál  pertenece la jaba sin etiqueta master</string>
    <string name="titulo_jaba_fragment">¿Selecciona el rubro al cuál pertenece la jaba sin etiqueta master?</string>
    <string name="jaba_muebles">Jaba Muebles</string>
    <string name="jaba_celulares">Jaba Celulares</string>
    <string name="jaba_suministros">Jaba Suministros</string>
    <string name="jaba_ropa">Jaba Ropa</string>
    <string name="item_captura_loteo">SIN MASTER</string>
    <string name="eliminar_row">Eliminar</string>
    <string name="titulo_jaba_sin_etiqueta">Jaba sin etiqueta</string>
    <string name="titulo_grabar">Confirmar Jaba</string>
    <string name="msg_grabar">Se realizará la confirmación de la jaba</string>
    <string name="cantidad_loteo">Cantidad</string>
    <string name="recibido_surtido">Recibi %1$d/%2$d </string>
    <string name="aceptar_cantidad">Aceptar</string>
    <string name="ingresa_cantidad_recibida">Ingresa cantidad recibida</string>
    <string name="title_empty_gte">Nº Empleado del Gerente</string>
    <string name="message_empty_gte">Favor de ingresar un número de Gerente válido</string>
    <string name="title_empty_auditor">Nº Empleado de Auditor</string>
    <string name="message_empty_auditor">Favor de ingresar un número de Auditor válido</string>
    <string name="select_irregular">Seleciona la irregularidad</string>
    <string name="title_empty_unidad">Nº de Unidad</string>
    <string name="message_empty_unidad">Favor de ingresar un número de Unidad válido</string>
    <string name="message_error_driver_employee">Favor de ingresar un número de Chofer válido</string>
    <string name="select_opcion">Seleciona una opción</string>
    <string name="title_empty_folioacta">Folio Acta</string>
    <string name="message_empty_folioacta">Favor de ingresar un número de Folio Acta válido</string>
    <string name="title_error_driver_employee">Empleado Chofer</string>
    <string name="warning_title_internet">El dispositivo no se encuentra conectado a Internet.</string>
    <string name="warning_message_internet">Favor de acercarse al área de cajas.</string>
    <string name="titulo_imei">IMEI: </string>
    <string name="titulo_encabezado">Articulo Sobrante</string>
    <string name="subtitulo_encabezado">Selecciona el rubro al que pertenece el sobrante ingresado</string>
    <string name="rubro_muebles">Código Muebles</string>
    <string name="rubro_udi">Udi Muebles</string>
    <string name="rubro_moto">Código Motocicleta</string>
    <string name="rubro_mensajeria">Código Mensajería</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>