<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jaba"
            android:title="@string/menu_jaba"
            app:actionLayout="@layout/chevron"
            android:visible="true"/>

        <item
            android:id="@+id/nav_master"
            android:title="@string/menu_master"
            app:actionLayout="@layout/chevron"
            android:visible="false"/>
        <item
            android:id="@+id/nav_salir"
            android:title="@string/menu_salir"
            app:actionLayout="@layout/chevron"/>

         
    </group>

</menu>