<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preconfirmar.SalirFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icono_warning"
            android:src="@drawable/img_warning" />

        <TextView
            android:id="@+id/title_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/circularstd_bold"
            android:gravity="center"
            android:text="@string/quiere_salir"
            android:textColor="@color/blue_500"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/message_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:lineSpacingExtra="5sp"
            android:paddingEnd="5dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/circularstd_book"
            android:gravity="center"
            android:text="@string/salirfragment"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_nosalir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/cardview_blue_redonded"
            android:elevation="10dp"
            android:text="@string/btn_no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_sisalir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/cardview_white_redonded"
            android:elevation="10dp"
            android:text="@string/btn_yes"
            android:textAllCaps="false"
            android:textColor="@color/blue_500"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>