<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".preconfirmar.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_300"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/circularstd_book"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tiempo_recepcion"
            android:textColor="@color/yellow_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hora_preconf"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:elevation="5dp"
            android:fontFamily="@font/circularstd_bold"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvfolio"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0"
                android:elevation="4dp"
                android:fontFamily="@font/circularstd_book"
                android:gravity="start|bottom"
                android:text="@string/apkFolio"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_folio_actual"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.0"
                android:elevation="4dp"
                android:fontFamily="@font/circularstd_book"
                android:gravity="start|bottom"
                android:text=""
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_porcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:elevation="4dp"
                android:fontFamily="@font/circularstd_book"
                android:gravity="end|bottom"
                android:text="@string/progress"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                android:maxHeight="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:progress="1"
                android:progressDrawable="@drawable/progreesbar_color" />

            <View
                android:id="@+id/view_espacio"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btn_finalizar"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_check"
                android:elevation="4dp"
                android:text="@string/to_end"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textColor="@color/blue_500"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_grabar_surtido"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_check"
                android:elevation="4dp"
                android:text="@string/btn_grabar"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/blue_500"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_medium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline25">

        <LinearLayout
            android:id="@+id/linearLayout_scanner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_master_codigo_vale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/title_ediText"
            android:textColor="@color/fonts"
            android:textSize="16sp" />


        <com.cedisropa.scanner.ScannableEditText
            android:id="@+id/edi_scanner_captura"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/input_digitos"
            android:background="@color/white"
            android:digits="@string/input_digitos"
            android:hint="@string/hint"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters"
            android:longClickable="false"
            android:maxLength="30"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/fonts"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearlayout_boton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_capturar_scanner"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/blue_300"
                android:elevation="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:longClickable="false"
                android:text="@string/btn_capturar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mercancia_capturada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/circularstd_book"
                    android:layout_weight="3"
                    android:visibility="visible"
                    android:text="@string/marcanciaLista"
                    android:textColor="@color/blue_500"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_mercancia_pendiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/circularstd_book"
                    android:layout_weight="3"
                    android:visibility="gone"
                    android:text="@string/marcanciapendiente"
                    android:textColor="@color/blue_500"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/img_icono_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:visibility="gone"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline26">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodoItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            tools:listitem="@layout/item_captura" />

    </LinearLayout>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>